fixed bars symbol on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,7 +187,7 @@ h2 {
 
 @media (max-width: 1000px) {
   #nav {
-	width: 0;
+    width: 0;
     padding: 0;
     margin-top: 59px;
     transition: width 0.5s;
@@ -197,13 +197,11 @@ h2 {
   }
   #responsive-nav {
     z-index: 2;
-	width: 50px;
-	height: 50px;
-	display: block;
-  	padding-left: 1.25em;
-  	padding-top: 0.6em;
-  	font-size: 20px;
-  	color: #006f99;
+    display: block;
+    padding-top: 1.1em;
+    padding-right: 1em;
+    font-size: 20px;
+    color: #006f99;
   }
 }
 
